# privacy-critical-signing

./: .gitignore  .gitmodules  Cargo.toml  README.md
alohomora/: Cargo.toml
alohomora/src/: ext.rs  lib.rs  pcr.rs
signature-lint/: Cargo.toml  README.md  sign.sh
signature-lint/src/: lib.rs
tests/: Cargo.toml  rust-toolchain
tests/recursive/: Cargo.toml
tests/recursive/src/: main.rs  second.rs  third.rs
tests/signed/: Cargo.toml
tests/signed/src/: main.rs
tests/unsigned/: Cargo.toml
tests/unsigned/src/: main.rs
