[package]
name = "signature_lint"
version = "0.1.0"
authors = ["authors go here"]
description = "description goes here"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.0"
clippy_utils = { git = "https://github.com/artemagvanian/rust-clippy-nightly-2023-04-12", rev = "88cd75c5ecb95c4dfbe8ebc4dd5732edd8652ed8" }
dylint_linting = "2.5.0"
if_chain = "1.0.2"
reqwest = { version = "0.12.2", features = ["blocking"] }
scrutils = { version = "0.1.0", path = "../scrutinizer/scrutils" }

[dev-dependencies]
dylint_testing = "2.5.0"

[package.metadata.rust-analyzer]
rustc_private = true
